k8s/tekton/resources/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-stripprefix@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - tekton.renovate-talk.pietervincken.com
      secretName: tls
  rules:
    - host: tekton.renovate-talk.pietervincken.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
